--- a/model_configs/ffhq.yml
+++ b/model_configs/ffhq.yml
@@ -1,7 +1,7 @@
-channel_mult: [1, 2, 2, 2, 2, 2]
+channel_mult: [1, 2, 2, 2, 2]
 num_blocks: 4
 attn_levels: [4]
 
-modes1_list: [32, 32, 32, 32, null, null]
-modes2_list: [17, 17, 17, 17, null, null]
-dual_block_thresh: 3
+modes1_list: [32, 16, 8, null, null]
+modes2_list: [17, 9, 5, null, null]
+dual_block_thresh: 2
