--- a/model_configs/ffhq.yml
+++ b/model_configs/ffhq.yml
@@ -1,7 +1,7 @@
-channel_mult: [1, 2, 2, 2, 2]
+channel_mult: [1, 2, 2, 2, 2, 2]
 num_blocks: 4
 attn_levels: [4]
 
-modes1_list: [32, 16, 8, null, null]
-modes2_list: [17, 9, 5, null, null]
+modes1_list: [32, 16, 8, null, null, null]
+modes2_list: [33, 17, 9, null, null, null]
 dual_block_thresh: 2
